syntax = "proto3";

package financial_integration_service_api.v1;

option go_package = "github.com/SimifiniiCTO/simfiny-financial-integration-service/pkg/generated/financial_integration_service_api/v1";
import "protoc-gen-gorm/options/gorm.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

enum ReOccuringTransactionsFrequency {
    RE_OCCURING_TRANSACTIONS_FREQUENCY_UNSPECIFIED = 0;
    RE_OCCURING_TRANSACTIONS_FREQUENCY_WEEKLY = 1;
    RE_OCCURING_TRANSACTIONS_FREQUENCY_BIWEEKLY = 2;
    RE_OCCURING_TRANSACTIONS_FREQUENCY_SEMI_MONTHLY = 3;
    RE_OCCURING_TRANSACTIONS_FREQUENCY_MONTHLY = 4;
    RE_OCCURING_TRANSACTIONS_FREQUENCY_ANNUALLY = 5;
}

enum ReOccuringTransactionsStatus {
    RE_OCCURING_TRANSACTIONS_STATUS_UNSPECIFIED = 0;
    // A MATURE recurring stream should have at least 3 transactions and happen
    //  on a regular cadence (For Annual recurring stream, we will mark it MATURE after 2 instances).
    RE_OCCURING_TRANSACTIONS_STATUS_MATURE = 1;
    // When a recurring transaction first appears in the transaction history and before it fulfills
    // the requirement of a mature stream, the status will be EARLY_DETECTION.
    RE_OCCURING_TRANSACTIONS_STATUS_EARLY_DETECTION = 2;
    // A stream that was previously in the EARLY_DETECTION status will move to the TOMBSTONED
    // status when no further transactions were found at the next expected date.
    RE_OCCURING_TRANSACTIONS_STATUS_TOMBSTONED = 3;
}


enum ReCurringFlow {
    RE_CURRING_FLOW_UNSPECIFIED = 0;
    RE_CURRING_FLOW_INFLOW = 1;
    RE_CURRING_FLOW_OUTFLOW = 2;
}

message InvestmentTransaction {
    // @gotag: ch:"account_id"
    string account_id = 1;
    // @gotag: ch:"amount"
    string ammount = 2;
    // @gotag: ch:"investment_transaction_id"
    string investment_transaction_id = 3;
    // @gotag: ch:"security_id"
    string security_id = 4;
    // @gotag: ch:"date"
    string date = 5;
    // @gotag: ch:"name"
    string name = 6;
    // @gotag: ch:"quantity"
    double quantity = 7;
    // @gotag: ch:"amount"
    double amount = 8;
    // @gotag: ch:"price"
    double price = 9;
    // @gotag: ch:"fees"
    double fees = 10;
    // @gotag: ch:"type"
    string type = 11;
    // @gotag: ch:"subtype"
    string subtype = 12;
    // @gotag: ch:"iso_currency_code"
    string iso_currency_code = 13;
    // @gotag: ch:"unofficial_currency_code"
    string unofficial_currency_code = 14;
     // @gotag: ch:"link_id"
    uint64 link_id = 15 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""},
        (validate.rules).uint64.gt = 0
    ];
    // @gotag: ch:"id"
    uint64 id = 16 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""}
    ];
        // @gotag: ch:"user_id"
    uint64 user_id = 17 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""},
        (validate.rules).uint64.gt = 0
    ];

    string created_at = 18;
    option (gorm.opts) = {ormable: true};
    int32 sign = 19;
}

message ReOccuringTransaction {
    // @gotag: ch:"account_id"
    string account_id = 1;
    // @gotag: ch:"stream_id"
    string stream_id = 2;
    // @gotag: ch:"category_id"
    string category_id = 4;
    // @gotag: ch:"description"
    string description = 5;
    // @gotag: ch:"merchant_name"
    string merchant_name = 6;
    // @gotag: ch:"personal_finance_category_primary"
    string personal_finance_category_primary = 7;
    // @gotag: ch:"personal_finance_category_detailed"
    string personal_finance_category_detailed = 8;
    // @gotag: ch:"first_date"
    string first_date = 9;
    // @gotag: ch:"last_date"
    string last_date = 10;
    // @gotag: ch:"frequency"
    ReOccuringTransactionsFrequency frequency = 11;
    // @gotag: ch:"transaction_ids,array"
    string transaction_ids = 12;
    // @gotag: ch:"average_amount"
    string average_amount = 13;
    // @gotag: ch:"average_amount_iso_currency_code"
    string average_amount_iso_currency_code = 14;
    // @gotag: ch:"last_amount"
    string last_amount = 15;
    // @gotag: ch:"last_amount_iso_currency_code"
    string last_amount_iso_currency_code = 16;
    // @gotag: ch:"is_active"
    bool is_active = 17;
    // @gotag: ch:"status"
    ReOccuringTransactionsStatus status = 18;
    // @gotag: ch:"updated_time"
    string updated_time = 19;
    // @gotag: ch:"user_id"
    uint64 user_id = 20 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""},
        (validate.rules).uint64.gt = 0
    ];
    // @gotag: ch:"link_id"
    uint64 link_id = 21 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""},
        (validate.rules).uint64.gt = 0
    ];
    // @gotag: ch:"id"
    uint64 id = 22 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""}
    ];
    // @gotag: ch:"flow"
    ReCurringFlow flow = 23;
    option (gorm.opts) = {ormable: true};
    int32 sign = 24;
}

message Transaction {
    option (gorm.opts) = {ormable: true};
    // @gotag: ch:"account_id"
    string account_id = 1;
    // @gotag: ch:"amount"
    double amount = 2;
    // @gotag: ch:"iso_currency_code"
    string iso_currency_code = 3;
    // @gotag: ch:"unofficial_currency_code"
    string unofficial_currency_code = 4;
    // @gotag: ch:"category_id"
    string category_id = 6;
    // @gotag: ch:"check_number"
    string check_number = 7;
    // @gotag: ch:"date"
    string date = 8;
    // @gotag: ch:"datetime"
    string datetime = 9;
    // @gotag: ch:"authorized_date"
    string authorized_date = 10;
    // @gotag: ch:"authorized_datetime"
    string authorized_datetime = 11;
    // @gotag: ch:"name"
    string name = 13;
    // @gotag: ch:"merchant_name"
    string merchant_name = 14;
    // @gotag: ch:"payment_channel"
    string payment_channel = 16;
    // @gotag: ch:"pending"
    bool pending = 17;
    // @gotag: ch:"pending_transaction_id"
    string pending_transaction_id = 18;
    // @gotag: ch:"account_owner"
    string account_owner = 19;
    // @gotag: ch:"transaction_id"
    string transaction_id = 20;
    // @gotag: ch:"transaction_code"
    string transaction_code = 21;
    uint64 id = 22 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""}
    ];
    // @gotag: ch:"user_id"
    uint64 user_id = 23 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""},
        (validate.rules).uint64.gt = 0
    ];
    // @gotag: ch:"link_id"
    uint64 link_id = 24 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: ""},
        (validate.rules).uint64.gt = 0
    ];
    int32 sign = 25;
        // @gotag: ch:"personal_finance_category_primary"
    string personal_finance_category_primary = 26;
    // @gotag: ch:"personal_finance_category_detailed"
    string personal_finance_category_detailed = 27;
    string location_address = 28;
    string location_city = 29;
    string location_region = 30;
    string location_postal_code = 31;
    string location_country = 32;
    double location_lat = 33;
    double location_lon = 34;
    string location_store_number = 35;
    string payment_meta_by_order_of = 36;
    string payment_meta_payee = 37;
    string payment_meta_payer = 38;
    string payment_meta_payment_method = 39;
    string payment_meta_payment_processor = 40;
    string payment_meta_ppd_id = 41;
    string payment_meta_reason = 42;
    string payment_meta_reference_number = 43;
}

message TransactionAmountByCountryMetric {
    string country = 1;
    double amount = 2;
}

message AverageTransactionAmountByCategoryMetric {
    string category = 1;
    double amount = 2;
}

message MonthlyTransactionCountByCategoryMetric {
    string category = 1;
    uint32 count = 2;
    string month = 3;
}

message TransactionCountByMerchantPaymentChannelMetric {
    string merchant_name = 1;
    string payment_channel = 2;
    uint32 transaction_count = 3;
}

message TransactionAmountDistributionByCategoryMetric {
    string category = 1;
    double mean = 2;
    double median = 3;
    double standard_deviation = 4;
}